Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12331

Explorer.exe crashes when launching an empty shortcut

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.4
    • Shell
    • None
    • November 2016

    Description

      1)Right click on desktop-> New Link
      2)Named it "boom" (whatever name works)
      3)Double click it.
      4)Explorer.exe is killed and relaunched.

      (win32ss/user/ntuser/msgqueue.c:846) err: Remove Window Messages E14FFAD0 From Sent Queue
      (win32ss/gdi/ntgdi/gdiobj.c:1176) GreDeleteObject: Trying to delete global object 3C0401D3
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 060500AD
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 520501B4
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 1505010C
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 030501C9
      (win32ss/user/ntuser/msgqueue.c:1277) err: NB Receiving Thread woken up dead!
      (win32ss/user/ntuser/msgqueue.c:2390) err: MQ Cleanup Post Messages E15AF6A8
      (win32ss/user/ntuser/msgqueue.c:2302) err: Thread Cleanup Sent Messages E14FFAD0
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 9C0501A8
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shell32/wine/shellord.c:1295) (true)
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shdocvw/shdocvw_main.c:201) (), stub!
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/comctl32/toolbar.c:380) [000500D0] TBSTYLE_REGISTERDROP not implemented
      fixme:(dll/win32/shell32/shellmenu/CBandSite.cpp:703) IDeskBarClient::UIActivateDBC() Properly notify bands?
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      (win32ss/user/ntuser/window.c:3024) err: FindWindowEx: Not Desktop Parent!
      (win32ss/user/ntuser/winpos.c:1553) err: Window is HWND_BOTTOM hwnd 00000001
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      CDefaultContextMenu.cpp:358: Unexpected failure 80004005.
      (win32ss/user/ntuser/window.c:2652) err: Destroying the ShellWindow!
      (win32ss/user/ntuser/desktop.c:713) err: ptiLastInput is CLEARED!!
      (win32ss/user/ntuser/msgqueue.c:846) err: Remove Window Messages E14863B8 From Sent Queue
      (win32ss/gdi/ntgdi/gdiobj.c:1176) GreDeleteObject: Trying to delete global object D4040193
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 0B05008F
      (win32ss/user/ntuser/msgqueue.c:1277) err: NB Receiving Thread woken up dead!
      (win32ss/user/ntuser/msgqueue.c:2390) err: MQ Cleanup Post Messages E1550148
      (win32ss/user/ntuser/msgqueue.c:2390) err: MQ Cleanup Post Messages E15E1C60
      (win32ss/user/ntuser/msgqueue.c:2302) err: Thread Cleanup Sent Messages E14863B8
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shell32/wine/shellord.c:1295) (true)
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shdocvw/shdocvw_main.c:201) (), stub!
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/comctl32/toolbar.c:380) [0008008A] TBSTYLE_REGISTERDROP not implemented
      fixme:(dll/win32/shell32/shellmenu/CBandSite.cpp:703) IDeskBarClient::UIActivateDBC() Properly notify bands?
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      (win32ss/user/ntuser/window.c:3024) err: FindWindowEx: Not Desktop Parent!
      (win32ss/user/ntuser/winpos.c:1553) err: Window is HWND_BOTTOM hwnd 00000001
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      CDefaultContextMenu.cpp:358: Unexpected failure 80004005.
      (win32ss/user/ntuser/message.c:1266) err: Attempted to post message to window 000A0096 when the thread is in cleanup!
      (win32ss/gdi/ntgdi/gdiobj.c:1176) GreDeleteObject: Trying to delete global object E30400CB
      (win32ss/user/ntuser/window.c:2652) err: Destroying the ShellWindow!
      (win32ss/user/ntuser/desktop.c:713) err: ptiLastInput is CLEARED!!
      (win32ss/user/ntuser/msgqueue.c:846) err: Remove Window Messages E14FFAD0 From Sent Queue
      (win32ss/gdi/ntgdi/gdiobj.c:1176) GreDeleteObject: Trying to delete global object 46040112
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 300500A9
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 0E050147
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 0D05014B
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 22050189
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 120501CD
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 0B0501C5
      (win32ss/user/ntuser/msgqueue.c:1277) err: NB Receiving Thread woken up dead!
      (win32ss/user/ntuser/msgqueue.c:2390) err: MQ Cleanup Post Messages E158DD18
      (win32ss/user/ntuser/msgqueue.c:2390) err: MQ Cleanup Post Messages E14B39C0
      (win32ss/user/ntuser/msgqueue.c:2302) err: Thread Cleanup Sent Messages E14FFAD0
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object D3050123
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shell32/wine/shellord.c:1295) (true)
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shdocvw/shdocvw_main.c:201) (), stub!
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/comctl32/toolbar.c:380) [000900BC] TBSTYLE_REGISTERDROP not implemented
      fixme:(dll/win32/shell32/shellmenu/CBandSite.cpp:703) IDeskBarClient::UIActivateDBC() Properly notify bands?
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      (win32ss/user/ntuser/window.c:3024) err: FindWindowEx: Not Desktop Parent!
      (win32ss/user/ntuser/winpos.c:1553) err: Window is HWND_BOTTOM hwnd 00000001
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      CDefaultContextMenu.cpp:358: Unexpected failure 80004005.
      (win32ss/user/ntuser/message.c:1266) err: Attempted to post message to window 00070108 when the thread is in cleanup!
      (win32ss/user/ntuser/message.c:1266) err: Attempted to post message to window 00070108 when the thread is in cleanup!
      (win32ss/user/ntuser/message.c:1266) err: Attempted to post message to window 00070108 when the thread is in cleanup!
      (win32ss/gdi/ntgdi/gdiobj.c:1176) GreDeleteObject: Trying to delete global object 7D04012E
      (win32ss/user/ntuser/window.c:2652) err: Destroying the ShellWindow!
      (win32ss/user/ntuser/desktop.c:713) err: ptiLastInput is CLEARED!!
      (win32ss/user/ntuser/msgqueue.c:846) err: Remove Window Messages E14863B8 From Sent Queue
      (win32ss/gdi/ntgdi/gdiobj.c:1176) GreDeleteObject: Trying to delete global object AB0401A2
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 6105013B
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 420501B0
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 1105008F
      (win32ss/user/ntuser/msgqueue.c:1277) err: NB Receiving Thread woken up dead!
      (win32ss/user/ntuser/msgqueue.c:2390) err: MQ Cleanup Post Messages E15CACE8
      (win32ss/user/ntuser/msgqueue.c:2390) err: MQ Cleanup Post Messages E1550E70
      (win32ss/user/ntuser/msgqueue.c:2302) err: Thread Cleanup Sent Messages E14863B8
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shell32/wine/shellord.c:1295) (true)
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shdocvw/shdocvw_main.c:201) (), stub!
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/comctl32/toolbar.c:380) [000E0090] TBSTYLE_REGISTERDROP not implemented
      fixme:(dll/win32/shell32/shellmenu/CBandSite.cpp:703) IDeskBarClient::UIActivateDBC() Properly notify bands?
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      (win32ss/user/ntuser/window.c:3024) err: FindWindowEx: Not Desktop Parent!
      (win32ss/user/ntuser/winpos.c:1553) err: Window is HWND_BOTTOM hwnd 00000001
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      CDefaultContextMenu.cpp:358: Unexpected failure 80004005.
      (win32ss/user/ntuser/window.c:2652) err: Destroying the ShellWindow!
      (win32ss/user/ntuser/desktop.c:713) err: ptiLastInput is CLEARED!!
      (win32ss/user/ntuser/msgqueue.c:846) err: Remove Window Messages E14FFAD0 From Sent Queue
      (win32ss/gdi/ntgdi/gdiobj.c:1176) GreDeleteObject: Trying to delete global object 48040192
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 6305010A
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 90050104
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 61050197
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object B605019A
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 8605009F
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object 2D0501BB
      (win32ss/user/ntuser/msgqueue.c:1277) err: NB Receiving Thread woken up dead!
      (win32ss/user/ntuser/msgqueue.c:2390) err: MQ Cleanup Post Messages E156A700
      (win32ss/user/ntuser/msgqueue.c:2390) err: MQ Cleanup Post Messages E15536C8
      (win32ss/user/ntuser/msgqueue.c:2302) err: Thread Cleanup Sent Messages E14FFAD0
      (win32ss/gdi/ntgdi/gdiobj.c:1169) GreDeleteObject: Trying to delete invalid object AF050139
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shell32/wine/shellord.c:1295) (true)
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/shdocvw/shdocvw_main.c:201) (), stub!
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      fixme:(dll/win32/comctl32/toolbar.c:380) [001000C8] TBSTYLE_REGISTERDROP not implemented
      fixme:(dll/win32/shell32/shellmenu/CBandSite.cpp:703) IDeskBarClient::UIActivateDBC() Properly notify bands?
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135
      (win32ss/user/ntuser/window.c:3024) err: FindWindowEx: Not Desktop Parent!
      (win32ss/user/ntuser/winpos.c:1553) err: Window is HWND_BOTTOM hwnd 00000001
      (dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(rshell.dll) failing with status c0000135

      Attachments

        Issue Links

          Activity

            People

              learn_more Mark Jansen
              vicmarcal vicmarcal
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: