[SHELL32] Don't crash on an empty shortcut. CORE-12331 #resolve

svn path=/trunk/; revision=73245